# AD

./: .gitignore  AD-02_final.pptx  App.py  Groundwater_analysis_main.ipynb  code.txt  groundwater_analysis.ipynb  groundwater_data_processed.csv  pyproject.toml  scatter plot  world image plot
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
